# innovation-rag-semantic-chunking

./: .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  initial-project-setup.mk  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-macos.yml  ci.yml  poetry-update.yml
rag_semantic_chunking/: __init__.py  experiment_rag_semantic_chunking.ipynb
rag_semantic_chunking/data/: random_facts.txt
